--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": ".",
-  "name": "rest-countries-api",
+  "name": "launch-countdown-timer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
