--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": ".",
-  "name": "launch-countdown-timer",
+  "name": "rest-countries-api",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
