--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://fvaldes0109.github.io/rest-countries-api",
   "name": "rest-countries-api",
   "version": "0.1.0",
   "private": true,
